cmake_minimum_required(VERSION 3.8)
project(oav_utils)

# Omni-directional Autonomous Vehicle

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(visualization_msgs REQUIRED)
find_package(std_srvs)
find_package(geometry_msgs)
find_package(sensor_msgs)
find_package(Eigen3 REQUIRED)

#===================================
# Resources
install(DIRECTORY
  rviz
  launch
  DESTINATION share/${PROJECT_NAME})


# Install Python executables
install(PROGRAMS
  scripts/grpc_client_node.py
  scripts/rpi_motor_pb2.py
  scripts/rpi_motor_pb2_grpc.py
  scripts/interface/rpi-motor.proto
  scripts/teleop_control_node.py
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
